force-app/main/default/objects/CaseTypeConfig__mdt/CaseTypeConfig__mdt.object-meta.xml
<CustomObject>
    <label>CaseTypeConfig</label>
    <pluralLabel>CaseTypeConfigs</pluralLabel>
</CustomObject>