force-app/main/default/objects/CaseTypeConfig__mdt/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
                <default>true</default>
                <label>Complaint</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>