force-app/main/default/objects/CaseTypeConfig__mdt/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>