force-app/main/default/objects/CaseTypeConfig__mdt/fields/Case_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Status__c</fullName>
    <label>Case Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Appointment Requested</fullName>
            </value>
            <value>
                <fullName>Received Customer Documents</fullName>
            </value>
            <value>
                <fullName>Contract Document Printed</fullName>
            </value>
            <value>
                <fullName>Customer Signed SPA</fullName>
            </value>
            <value>
                <fullName>SPA Signed-Cheques Received</fullName>
            </value>
            <value>
                <fullName>Submitted to Sales Operations</fullName>
            </value>
            <value>
                <fullName>Rejected by Sales Operations</fullName>
            </value>
            <value>
                <fullName>Accepted by Sales Operations</fullName>
            </value>
            <value>
                <fullName>Rejected SPA Validation</fullName>
            </value>
            <value>
                <fullName>Approved SPA Validation</fullName>
            </value>
            <value>
                <fullName>SPA Counter Sign Pending</fullName>
            </value>
            <value>
                <fullName>SPA Counter Signed</fullName>
            </value>
            <value>
                <fullName>Transfer Initiated</fullName>
            </value>
            <value>
                <fullName>Cancel Request</fullName>
            </value>
            <value>
                <fullName>Transfer Completed</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Awaiting OPS Update</fullName>
            </value>
            <value>
                <fullName>Escalated to CRM</fullName>
            </value>
            <value>
                <fullName>Communication Sent</fullName>
            </value>
            <value>
                <fullName>Customer Informed</fullName>
            </value>
            <value>
                <fullName>Customer Guided Throught Process</fullName>
            </value>
            <value>
                <fullName>Construction Update Communicated</fullName>
            </value>
            <value>
                <fullName>Handover Dates Confirmed</fullName>
            </value>
            <value>
                <fullName>Request Attended</fullName>
            </value>
            <value>
                <fullName>Contact Details Updated</fullName>
            </value>
            <value>
                <fullName>Requirments Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>