force-app/main/default/objects/CaseTypeConfig__mdt/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <label>Case Sub Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>