force-app/main/default/objects/CaseTypeConfig__mdt/fields/Default_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_Charge_Amount__c</fullName>
    <label>Default Charge Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>