force-app/main/default/objects/CaseTypeConfig__mdt/fields/Default_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Charge_Type__c</fullName>
    <label>Default Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADM Fee</fullName>
                <default>true</default>
                <label>ADM Fee</label>
            </value>
            <value>
                <fullName>Service Charge</fullName>
            </value>
            <value>
                <fullName>Late Payment Charges</fullName>
            </value>
            <value>
                <fullName>ADM Admin Fee</fullName>
            </value>
            <value>
                <fullName>Transfer Fee</fullName>
            </value>
            <value>
                <fullName>Admin Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>